# rusty-zip

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml  setup-hooks.sh  test-hooks.sh
.cursor/rules/: project-default.mdc
python_src/: test_zipwriter.py
python_src/py_zip_rs/: __init__.py
src/: lib.rs
