[package]
name = "py-zip-rs"
version = "0.1.0"
edition = "2021"
description = "Python wrapper for Rust's zip crate with legacy ZipCrypto support"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
repository = "https://github.com/yourusername/py-zip-rs"
readme = "README.md"
keywords = ["python", "zip", "compression", "zipcrypto", "pyo3"]
categories = ["compression", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_zip_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module"] }
zip = { version = "=2.2.3" }