[package]
name = "rusty-zip"
version = "0.1.0-alpha.1"
edition = "2021"
description = "Python wrapper for Rust's zip crate with legacy ZipCrypto encryption support"
authors = ["Hao Guan <gh@raptium.net>"]
license = "MIT"
repository = "https://github.com/raptium/rusty-zip"
readme = "README.md"
keywords = ["python", "zip", "compression", "zipcrypto", "pyo3"]
categories = ["compression", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_zip"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0", features = ["extension-module"] }
zip = { version = "=2.2.3" }
